[project]
authors = [{name = "star2000", email = "i@star2000.work"}]
name = "novel-generator"
requires-python = "~=3.13.0"
version = "0.0.1"
dependencies = [
    "ollama>=0.6.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
default = true
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
