[project]
authors = [{name = "star2000", email = "i@star2000.work"}]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "diff-match-patch>=20241021",
  "markdown>=3.10.2",
  "modelscope>=1.35.3",
  "ollama>=0.6.1",
  "pycnnum>=2.1.1",
  "python-dotenv>=1.2.2",
  "requests>=2.33.0",
  "rich>=14.3.3",
  "transformers>=5.5.0",
]
description = "高质量长篇小说生成器"
name = "novel-generator"
requires-python = ">=3.13"
version = "0.0.1"

[tool.uv]
package = false

[[tool.uv.index]]
default = true
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "ipython>=9.11.0",
]
